<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_gradient_cll_rcc">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/calls_tablayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:gravity="center"
            android:textAlignment="center"
            app:barrierMargin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabBackground="@drawable/tablayout_item_background_selector"
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/tab_text_cll_rcc"
            app:tabTextColor="@color/main_text_color_cll_rcc">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="100dp"
                android:text="@string/title_all"
                android:textAlignment="center" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_incoming" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_outgoing" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miss" />
        </com.google.android.material.tabs.TabLayout>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/calls_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintTop_toBottomOf="@id/calls_tablayout" />




        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/contacts_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:backgroundTint="@android:color/transparent"
                android:drawableEnd="@drawable/ic_search_light_cllrcc"
                android:focusedByDefault="false"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:maxLength="20"
                android:padding="12dp"
                android:textColor="@color/main_text_color_cll_rcc"
                android:textColorHint="@color/metall"
                tools:targetApi="o" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>