<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isResume"
            type="boolean" />

        <variable
            name="isSubscribed"
            type="boolean"
            android:value="false" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_gradient_cll_rcc">

        <FrameLayout
            android:id="@+id/fl_text_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/search_background"
            android:elevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tvVerRecTimer">


            <EditText
                android:id="@+id/text_rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:elevation="0dp"
                android:fontFamily="@font/montserrat_cll_rcc"
                android:hint="@string/enter_the_title_or_record"
                android:padding="8dp"
                android:textColor="@color/main_text_color_cll_rcc"
                android:textColorHint="@color/metall"
                android:textSize="14sp"
                tools:ignore="TextFields" />
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_cll_rcc"
            android:textColor="@color/medium"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_text_rename" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvVerRecTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/montserrat_cll_rcc"
            android:textColor="@color/main_text_color_cll_rcc"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2:05:05" />

        <com.ansh.recorder.ui.recording.verify_cll_rec.AudioWaveView
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            app:animateExpansion="true"
            app:chunkHeight="100dp"
            app:chunkRadius="0dp"
            app:chunkSpacing="2dp"
            app:chunkWidth="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:minChunkHeight="5dp"
            app:touchable="true"
            app:waveColor="@android:color/black" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/red_line_seek_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-12dp"
            android:background="@drawable/thumb_seekbar"
            app:layout_constraintBottom_toBottomOf="@id/wave"
            app:layout_constraintStart_toStartOf="@id/wave"
            app:layout_constraintTop_toTopOf="@id/wave" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/resume_pause_rec"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@{isResume ? @drawable/ic_pause_cll_rcc : @drawable/ic_play_white }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wave" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/click_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:alpha="@{isSubscribed?  1.0f: 0.30f }"
                    android:background="@drawable/ic_save_cll_rcc" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_cll_rcc"
                    android:text="@string/save_cll_rcc"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/click_save_gd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:alpha="@{isSubscribed?  1.0f: 0.30f }"
                    android:background="@drawable/ic_save_gd" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_cll_rcc"
                    android:text="@string/save_gd"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/click_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:alpha="@{isSubscribed?  1.0f: 0.30f }"
                    android:background="@drawable/ic_share_cll_rcc" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_cll_rcc"
                    android:text="@string/share_cll_rcc"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/click_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_delete_cll_rcc" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_cll_rcc"
                    android:text="@string/delete_cll_rcc"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>